--- a/skins/weborder/css/myorder.css
+++ b/skins/weborder/css/myorder.css
@@ -19,21 +19,19 @@
 #modifiers_popup .modifiers_table_scroll {
     overflow-y: auto;
     position: relative;
-    margin: 5px 13px 5px 8px;
-    padding-left: 5px;
+    margin: 5px 0 5px 8px;
+    padding: 0 14px;
     height: 100%;
-    -ms-overflow-style: none;
-}
-#modifiers_popup .modifiers_table_scroll::-webkit-scrollbar {
-    width: 0 !important;
 }
 
 #modifiers_popup .modifiers_table .arrow_top {
     top:5px;
+    right: 20px;
 }
 
 #modifiers_popup .modifiers_table .arrow_bottom {
     bottom:5px;
+    right: 20px;
 }
 
 .ui-invisible {
